<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>turtlebot3_bt</name>
  <version>0.0.0</version>
  <description>Package for Behaviour Trees lab</description>
  <maintainer email="kamil.mlodzikowski@put.poznan.pl">Kamil Młodzikowski</maintainer>
  <license>TODO: License declaration</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <buildtool_depend>ament_cmake_python</buildtool_depend>

  <depend>rclpy</depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <exec_depend>py_trees_ros</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
